<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrateAccountActivity"
    android:background="@drawable/fondocuestionarios"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apli"
            android:fontFamily="@font/inversions"
            android:textSize="35dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorPrimary"/>

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/logopecesito"
            android:layout_marginStart="35dp"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Registro"
        android:layout_gravity="center"
        android:textSize="33dp"
        android:fontFamily="@font/lovelo"
        android:layout_marginTop="20dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/waste"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/nusuario"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:hint="@string/nombreusuario"
                android:fontFamily="@font/mvboli"
                android:textColor="@color/blanco" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilArea4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/waste">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/email"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/mvboli"
                android:textColor="@color/blanco" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilArea2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/waste">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:hint="@string/password"
                android:fontFamily="@font/mvboli"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilArea3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/waste">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password2"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:hint="@string/passwordagain"
                android:layout_marginLeft="40dp"
                android:fontFamily="@font/mvboli"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sexo"
        android:fontFamily="@font/mvboli"
        android:layout_marginLeft="40dp"
        android:textSize="17dp"


        />

    <RelativeLayout
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center">

            <RadioButton
                style="@android:style/Widget.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hombre"
                android:layout_gravity="center"
                tools:text="Hombre"
        />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Mujer"
                tools:text="Mujer" />
        </RadioGroup>
    </RelativeLayout>
    <Button
        android:layout_width="120dp"
        android:id="@+id/siguiente"
        android:layout_height="50dp"
        android:layout_gravity="right"
        android:background="@drawable/buttonsiguiente"
        />
</LinearLayout>