<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PreguntasParte1Activity"
    android:background="@drawable/fondocuestionarios">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apli"
                    android:fontFamily="@font/inversions"
                    android:textSize="35dp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/colorPrimary"/>

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="45dp"
                    android:background="@drawable/logopecesito"
                    android:layout_marginStart="35dp"
                    android:layout_gravity="left"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="70dp"
                    android:fontFamily="@font/multicolore"
                    android:text="@string/MensajeParaHacerCuestionario"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="55dp"
                    android:fontFamily="@font/multicolore"
                    android:text="@string/pregunta1"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textSize="20dp"
                    android:textStyle="bold" />


            </LinearLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:textAlignment="center"
                android:layout_gravity="center">
                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:id="@+id/tipoDeAgua"
                    >

                    <RadioButton
                        android:id="@+id/aguaDulce"
                        style="@android:style/Widget.CompoundButton.RadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/aguaDulce"
                        tools:text="@string/aguaDulce"
                        android:fontFamily="@font/mvboli"
                        android:checked="true"
                        android:textSize="20dp"
                        android:textColor="@color/textSecondary"/>

                    <RadioButton
                        android:id="@+id/aguaSalada"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/aguaSaladada"
                        android:layout_marginTop="25dp"
                        android:textSize="20dp"
                        android:fontFamily="@font/mvboli"
                        tools:text="@string/aguaSaladada"
                        android:textColor="@color/textSecondary"/>

                </RadioGroup>
            </RelativeLayout>
            <Button
                android:layout_width="120dp"
                android:id="@+id/siguiente"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:layout_marginTop="25dp"
                android:background="@drawable/buttonsiguiente"
                />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>