<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/fondocuestionarios"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mx.perse_care.undefinedsoft.perse_care.Activities.OvidasteActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apli"
            android:fontFamily="@font/inversions"
            android:textSize="35dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorPrimary"/>

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/logopecesito"
            android:layout_marginStart="40dp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/waste">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/codigo"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:fontFamily="@font/mvboli"
                android:hint="@string/ingresascorreo"
                android:inputType="number"
                android:textColor="@color/blanco" />
        </android.support.design.widget.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/especificacionesdecorreo"
            android:textSize="12dp" />

        <Button
            android:id="@+id/regresar"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:layout_marginTop="100dp"
            android:background="@drawable/buttonsiguiente" />
    </LinearLayout>
</LinearLayout>
