<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpDesk.FAQs.AltasFaqs">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lovelo"
                android:gravity="center"
                android:text="@string/FAQs"
                android:textSize="35dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilArea2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:fontFamily="@font/waste"
                    android:textColorHint="@color/negro">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtPregunta"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mvboli"
                        android:hint="@string/hacerPregunta" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilArea3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:fontFamily="@font/waste"
                    android:textColorHint="@color/negro">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtRespuesta"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mvboli"
                        android:hint="@string/respuesta" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/enviarPregunta"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="right"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="20dp"
                    android:src="@drawable/ic_menu_send" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>