<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_gravity="center">
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@color/otroVerdeAgua"
        android:gravity="center"
        android:orientation="vertical">

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:text="Programador"/>
           <EditText
               android:id="@+id/dialog_programador"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="Programador"
               android:textColor="@color/blanco"
               android:textStyle="bold" />

       </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Problema:"/>

        <EditText
            android:id="@+id/dialog_problema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="problema"
            android:textColor="@color/blanco"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/mvboli"
            android:text="@string/tipoM"
            android:textSize="17sp" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center">
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:id="@+id/dialog_tipoDeMantenimientoDialog"
                >

                <RadioButton
                    android:id="@+id/dialog_Rpreventivo"
                    style="@android:style/Widget.CompoundButton.RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/preventivo"
                    android:checked="true"
                    android:textSize="14sp"
                    android:textColor="@color/textSecondary"/>

                <RadioButton
                    android:id="@+id/dialog_Rcorrectivo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/correctivo"
                    android:textSize="14sp"
                    android:textColor="@color/textSecondary"/>
            </RadioGroup>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_gravity="center">
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/dialog_btn_borrarMantenimiento"
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_borrar"
                android:textAlignment="textStart"
                android:textColor="@color/blanco"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/dialog_btn_guardarMantenimiento"
                android:padding="15dp"
                android:src="@drawable/ic_edit"
                android:drawablePadding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
              />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
